--- a/css/styles.css
+++ b/css/styles.css
@@ -32,7 +32,7 @@ body::before {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('https://i.imgur.com/M74jkdQ.png');
+    background-image: url('https://wallpapercave.com/wp/wp2200981.jpg');
     background-size: 200px;
     background-repeat: repeat;
     opacity: 0.05;
